--- a/index.html
+++ b/index.html
@@ -2,15 +2,57 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>CSS Selector</title>
+    <title>趣味心理测试--你是哪种情绪化动物</title>
     <style type="text/css">
-    a:link{color:green;}
-    a:visited{color:red;}
-    p:hover{color:purple;}
+      body{
+        background-image:url("Margo.jpg");
+      }
+      h1{
+        text-align:center;
+        color:#363036;
+      }
+      P{
+        text-align:center;
+        color:363036;
+      }
+      .button{
+        font-size:20px;
+        background-color:#ffc500;
+        boeder-color:#ffc500;
+        color:363036;
+        padding:10px;
+        text-align:center;
+        margin:20px;
+        align:center;
+      }
     </style>
   </head>
   <body>
-  <a href="http://by.cuc.edu.cn/">Visit CUC Website</a>
-  <p>The red style is applied when the mouse cursor hovers over this element.<p>
+    <h1 style="font-size:350%;"color="yellow">趣味心理测试--你是哪种情绪化动物</h1>
+    <p id="demo">
+      <b>
+
+        <br>
+        有些人是忧心派，总是为了一点小事烦恼；
+        <br>
+        有些人是乐天派，无忧无虑没心没肺。
+        <br>
+        无论你的兴许是怎样的，都可以反映出你的生活态度。
+        <br>
+        假如用动物来做比喻的话，来测测你是哪种动物吧！
+        <br>
+      </b>
+    </p>
+    <div style="text-align:center;">
+      <img src="background4.png" style="with:300px;hight:300px;">
+    </div>
+    <div style="text-align:center;">
+      <a href="javascript_puzzle2.html">
+        <button class="button">
+          <b>进入测试</b>
+        </button>
+      </a>
+    </div>
+
   </body>
 </html>
