--- a/pD/works.html
+++ b/pD/works.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
 		<title>Fay's Work</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
 		<link rel="stylesheet" type="text/css" href="work.css" >
 		<script src="https://www.jq22.com/jquery/jquery-1.10.2.js"></script>
 		 <!-- Bootstrap CSS -->
@@ -28,6 +30,10 @@
 		          <link rel="preconnect" href="https://fonts.googleapis.com">
 		      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		      <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
+          <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+          <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
 	 <style>
 
    		h2 {
@@ -42,7 +48,32 @@
   </head>
 
   <body style="background-color:#2b2c34;">
-    
+
+    <header class = "header">
+    <nav class="navbar navbar-expand-lg navbar bg">
+    <div class="container-fluid">
+      <a calss='navbar-brand' href="#"><img src='img/head portrait.png' width="50" height="50" alt="head portrait"><a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link"  style="color: #fffffe;border-color: #fffffe" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: #fffffe;border-color: #fffffe" href="Resume.pdf">Resume</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: #fffffe;border-color: #fffffe" href="works.html">Works</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    </nav>
+    </header>
+
+
 <!--PPT PORTFOLIO -->
 <br>
     <br>
@@ -249,7 +280,7 @@
 		</div>
 
 		<div style="display: flex; justify-content: center;">
-			<div class="card mb-4"style="width: 1150px;"> 
+			<div class="card mb-4"style="width: 1150px;">
 			<div class="card-header"style="background-color: #d5d5d5;">
 				Books
 			</div>
