--- a/index.html
+++ b/index.html
@@ -1,58 +1,200 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>趣味心理测试--你是哪种情绪化动物</title>
-    <style type="text/css">
-      body{
-        background-image:url("Margo.jpg");
-      }
-      h1{
-        text-align:center;
-        color:#363036;
-      }
-      P{
-        text-align:center;
-        color:363036;
-      }
-      .button{
-        font-size:20px;
-        background-color:#ffc500;
-        boeder-color:#ffc500;
-        color:363036;
-        padding:10px;
-        text-align:center;
-        margin:20px;
-        align:center;
-      }
-    </style>
+    <title>妈祖文化</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/index.css">
+      <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="导航栏.css">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+      <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <script src="js/index.js"></script>
   </head>
   <body>
-    <h1 style="font-size:350%;"color="yellow">趣味心理测试--你是哪种情绪化动物</h1>
-    <p id="demo">
-      <b>
 
-        <br>
-        有些人是忧心派，总是为了一点小事烦恼；
-        <br>
-        有些人是乐天派，无忧无虑没心没肺。
-        <br>
-        无论你的兴许是怎样的，都可以反映出你的生活态度。
-        <br>
-        假如用动物来做比喻的话，来测测你是哪种动物吧！
-        <br>
-      </b>
-    </p>
-    <div style="text-align:center;">
-      <img src="background4.png" style="with:300px;hight:300px;">
-    </div>
-    <div style="text-align:center;">
-      <a href="javascript_puzzle2.html">
-        <button class="button">
-          <b>进入测试</b>
-        </button>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark" id="bar">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="首页.html">
+        <img src="mazu.png" alt="STUDIO GHIBLI">
+      福见妈祖
       </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse nav justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="active">
+            <a class="nav-link" aria-current="page" href="首页.html">首页</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link  " aria-current="page" href="index.html">妈祖文化</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " aria-current="page" href="video.html">影视作品</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="fujianmazu.html">妈祖庙</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="旅游攻略.html">旅游攻略</a>
+          </li>
+        </ul>
+      </div>
     </div>
+  </nav>
+
+
+
+
+<div class="all">
+
+
+    <div class="divevery">
+        <div class="div1-1"> <div class="title">
+            非遗传承  ——  妈祖文化介绍
+          </div></div>
+        <div class="div1-2">
+
+        </div>
+      </div>
+    <div class="divevery">
+        <div class="div2-1">
+
+        </div>
+
+        <div class="div2-2">
+
+        </div>
+
+    </div>
+    <div class="divevery">
+        <div class="div3-1">
+
+        </div>
+        <a href="生平.html">
+            <div class="imgin1">
+            <img src="image/生平传说.png" alt="">
+            <p class="pp">【 生平传说 】</p>
+          </div></a>
+        <div class="div3-2">
+
+        </div>
+    </div>
+    <div class="divevery">
+        <div class="div4-1">
+
+        </div>
+        <a href="xin.html"><div class="imgin2">
+            <img src="image/信仰崇拜.png" alt="">
+            <p class="pp">【 信仰崇拜 】</p>
+          </div>
+        </a>
+        <div class="div4-2">
+
+        </div>
+    </div>
+    <div class="divevery">
+        <div class="div5-1">
+
+        </div>
+        <a href="xing.html">
+            <div class="imgin3">
+            <img src="image/形象.png" alt="">
+            <p class="pp">【 形象 】</p>
+          </div>
+        </a>
+        <div class="div5-2">
+
+        </div>
+    </div>
+    <div class="divevery">
+        <div class="div6-1">
+
+        </div>
+        <a href="ying.html">
+            <div class="imgin4">
+            <img src="image/影响与推广.png" alt="">
+            <p class="pp">【 影响与推广 】</p>
+          </div>
+        </a>
+        <div class="div6-2">
+
+        </div>
+    </div>
+    <div class="divevery">
+        <div class="div7-1">
+
+        </div>
+        <a href="min.html">
+            <div class="imgin5">
+            <img src="image/民俗活动.png" alt="">
+            <p class="pp">【 民俗活动 】</p>
+          </div>
+        </a>
+        <div class="div7-2">
+
+        </div>
+    </div>
+    <div class="divevery">
+        <div class="div8-1">
+
+        </div>
+        <a href="ji.html">
+            <div class="imgin6">
+            <img src="image/祭祀庙宇.png" alt="">
+            <p class="pp">【 祭祀庙宇 】</p>
+          </div>
+        </a>
+        <div class="div8-2">
+
+        </div>
+    </div>
+    <div class="divevery">
+        <div class="div9-1">
+
+        </div>
+        <a href="xiang.html">
+            <div class="imgin7">
+            <img src="image/相关文化.png" alt="">
+            <p class="pp">【 相关文化 】</p>
+
+          </div>
+        </a>
+        <div class="div9-2">
+
+        </div>
+    </div>
+    <div class="divevery">
+        <div class="div10-1">
+
+        </div>
+        <div class="div10-2">
+
+        </div>
+    </div>
+</div>
+
+
+<div class="studio container-fluid reveal">
+     <div class="studioDetails row m-5 p-5" id="jieshao">
+         <h6 class="display-6">秒懂妈祖</h6>
+           <div class="col-lg-6 text-left">
+             <hr class="line">
+             <p class="h5">妈祖文化是劳动人民千百年来尊崇、信仰妈祖过程中遗留和传承下来的物质及精神财富的总称，是中华民族传统文化的瑰宝。
+    妈祖流传于中国沿海地区的传统民间信仰。妈祖文化肇于宋、成于元、兴于明、盛于清、繁荣于近现代，妈祖文化体现了中国海洋文化的一种特质。历史上宋代出使高丽、元代海运漕运、明代郑和下西洋、清代复台定台，这一切都体现海洋文化的特征。中国民间在海上航行要先在船舶启航前要先祭妈祖，祈求保佑顺风和安全，在船舶上立妈祖神位供奉。这就是“有海水处有华人，华人到处有妈祖”的真实写照。而影响所及，妈祖由航海关系而演变为“海神”、“护航女神”等，因此形成了海洋文化史中最重要的中国民间信仰崇拜神之一。</p>
+
+          <br>
+             <a href="https://vhsagj.smartapps.cn/pages/wikisecond/video-flow?secondId=24646388&from=baikeswan&lemmaId=2015655&_swebfr=1&pageType=video&curNid=10168730623512479123" class="btn-primary">点击观看视频</a>
+           </div>
+           <div class="col-lg-6">
+             <img src="image\妈祖2.jpg"  class="img-fluid" height="800px">
+           </div>
+         </div>
+       </div>
+
+
 
   </body>
 </html>
