--- a/fujianmazu.html
+++ b/fujianmazu.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="./images/iconfont/iconfont.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?type=webgl&v=1.0&ak=7LPfH01R57Hu7yv7C6RtaUB81GpI1h6X"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?type=webgl&v=1.0&ak=7LPfH01R57Hu7yv7C6RtaUB81GpI1h6X"></script>
     <script src="./js/swiper-bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="shouye.css">
@@ -76,15 +76,11 @@
         <div id="mapControls"></div>
         <div class="detail">
             <div class="title">
-                <p>山丹艾黎纪念馆</p>
                 <span class="iconfont icon-anniu_guanbi close"></span>
             </div>
             <div class="content">
                 <p class="ts">简介</p>
                 <p class="text description">
-                    山丹艾黎纪念馆，位于甘肃省张掖市山丹县文化街上，是为纪念国际友人路易·艾黎（Rewi
-                    Alley）而修建，现为甘肃省爱国主义教育基地。1927年4月21日，路易·艾黎从新西兰来到中国，在华生活和工作了60年，将毕生献给了中华民族独立解放和国家建设事业。1987年12月逝世于北京，邓小平为他题词：伟大的国际主义战士永垂不朽。2009年，路易·艾黎被评为中国缘·十大国际友人。艾黎情系山丹，把山丹视为他的“第二故乡”。山丹艾黎纪念馆成立于2012年8月，位于张掖市山丹县新城区，占地面积7384平方米，建筑面积4228.96平方米，共有藏品及实物资料1352件（套）。陈列展览共分十个单元，分别是青春年代、上海岁月、工合运动、培黎学校、热爱中国、情系山丹、幸福晚年、友谊使者、崇高荣誉、精神永存。建馆以来，为发扬路易·艾黎大爱无疆的国际主义精神、无私奉献的人道主义精神、自强不息的艰苦奋斗精神、坚韧不拔的创新创业精神，做出了积极贡献。
-                </p>
             </div>
             <div class="pic">
                 <p class="ts">照片</p>
